--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Add src to PYTHONPATH
+        run: echo "PYTHONPATH=$PWD/src" >> $GITHUB_ENV
+
       - name: Run basic tests
         run: pytest -q
 
@@ -71,7 +74,7 @@ jobs:
 
   deploy:
     needs: run-tests
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && needs.run-tests.result == 'success'
     runs-on: ubuntu-latest
     environment:
       name: github-pages
