--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,10 @@ jobs:
           mv htmlcov site/coverage
 
       - name: Configure Pages
+        if: github.event_name == 'push'
         uses: actions/configure-pages@v4
+        with:
+          enablement: true
 
       - name: Print report URLs
         run: |
